<resources>
    <string name="app_name">EoT assignment in 2022</string>
    <string name="openingMessage">配布時期は2023年2月12日（試験期間の前日）を予定しています。<!--
        -->提出期限は2023年2月19日（日曜日）です。<!--
        -->2月12日になったらGithubよりプロジェクトをクローンして課題を始めてください。<!--
        -->課題の始め方が分からない時はTeamsで質問してください。<!--
        -->準備が遅れています。すみません。2月12日中にアップロードします。<!--
        -->準備ができましたらTeamsでアナウンスいたします。<!--
        -->（2月12日12時追記）</string>

    <string-array name="lv_cocktaillist">
        <item>ホワイトレディー</item>
        <item>バラライカ</item>
        <item>XYZ</item>
        <item>ニューヨーク</item>
        <item>マンハッタン</item>
        <item>ミシシッピミュール</item>
        <item>ブルーハワイ</item>
        <item>マイタイ</item>
        <item>マティーニ</item>
    </string-array>
    <string name="tv_lb_name">選択されたカクテル：</string>
    <string name="tv_name">未選択</string>。
    <string name="tv_lb_note">感想</string>
    <string name="btn_save">保存</string>

    <string name="tv_thx_title">注文完了</string>
    <string name="tv_thx_desc">以下のメニューのご注文を受け付けました。\nご注文ありがとうございます。</string>
    <string name="bt_thx_back">リストに戻る</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="lv_menu">
        <item>から揚げ定食</item>
        <item>ハンバーグ定食</item>
        <item>生姜焼き定食</item>
        <item>ステーキ定食</item>
        <item>野菜炒め定食</item>
        <item>とんかつ定食</item>
        <item>ミンチかつ定食</item>
        <item>コロッケ定食</item>
        <item>回鍋肉定食</item>
        <item>麻婆豆腐定食</item>
        <item>青椒肉絲定食</item>
        <item>焼き魚定食</item>
        <item>焼肉定食</item>
    </string-array>

    <!--
    <string name="tv_thx_title">注文完了</string>
    <string name="tv_thx_desc">以下のメニューのご注文を受け付けました。\nご注文ありがとうございます。</string>
    <string name="bt_thx_back">リストに戻る</string>
    -->
    <string name="menu_list_options_teishoku">定食</string>
    <string name="menu_list_options_curry">カレー</string>
    <string name="menu_list_context_desc">説明を表示</string>
    <string name="menu_list_context_order">ご注文</string>
    <string name="menu_list_context_header">操作を選んでください</string>
    <string name="tv_menu_unit">円</string>
    
    <string name="bt_play_play">再生</string>
    <string name="bt_play_pause">一時停止</string>
    <string name="bt_back">&lt;&lt;</string>
    <string name="bt_forward">&gt;&gt;</string>
    <string name="sw_loop">リピート再生</string>
</resources>